--- a/index.css
+++ b/index.css
@@ -46,10 +46,10 @@ header table {
     width:100%;
 }
 #logo {
-    width:35%;
+    width:20%;
 }
 #navigation {
-    width:65%;
+    width:80%;
 }
 #magnify {
     width:100vw;
@@ -103,7 +103,7 @@ header table {
     border:2vh solid #fff;
 }
 #top_part tr td{
-    width:50%;
+    width:20%;
 }
 #about {
     width:84% !important;
@@ -164,7 +164,7 @@ header table {
 #rightImage {
     width:100%;
     height:95vh;
-    background:linear-gradient(0deg,rgba(255, 44, 90, 0.8),rgba(2255, 44, 90, 0.8)),url("https://images.unsplash.com/photo-1506057527569-6a0285b2fcc1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=60") center center;
+    background:linear-gradient(0deg,rgba(255, 44, 90, 0.8),rgba(2255, 44, 90, 0.8)),url("https://images.pexels.com/photos/209235/pexels-photo-209235.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260") center center;
     background-size:cover;
     background-repeat:no-repeat;
 }
