--- a/index.css
+++ b/index.css
@@ -164,7 +164,7 @@ header table {
 #rightImage {
     width:100%;
     height:95vh;
-    background:linear-gradient(0deg,rgba(255, 44, 90, 0.8),rgba(2255, 44, 90, 0.8)),url("https://images.pexels.com/photos/209235/pexels-photo-209235.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=1260&w=1260") center center;
+    background:linear-gradient(0deg,rgba(255, 44, 90, 0.8),rgba(2255, 44, 90, 0.8)),url("https://images.pexels.com/photos/209235/pexels-photo-209235.jpeg") center center;
     background-size:cover;
     background-repeat:no-repeat;
 }
