--- a/index.css
+++ b/index.css
@@ -220,6 +220,11 @@ header table {
     padding:6vh 4vw;
     font-weight:bold;
 }
+#downloads h1 {
+    padding:5px 0px;
+    border-bottom:4px solid rgb(255, 44, 90);
+    width:8%;
+}
 #essay {
     width:92vw;
     padding:6vh 4vw;
