--- a/index.css
+++ b/index.css
@@ -205,6 +205,16 @@ header table {
     border-bottom:4px solid rgb(255, 44, 90);
     width:20%;
 }
+#spec-table
+{
+    overflow-x: auto;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}    
 #vocab {
     width:92vw;
     padding:6vh 4vw;
