check spec-table works

--- a/index.css
+++ b/index.css
@@ -211,7 +211,7 @@ header table {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
+    font-size: 32px;
     font: inherit;
     vertical-align: baseline;
 }    
