--- a/index.css
+++ b/index.css
@@ -176,7 +176,7 @@ header table {
 #domain h1 {
     padding:5px 0px;
     border-bottom:4px solid rgb(255, 44, 90);
-    width:12%;
+    width:14%;
 }
 #photos {
     width:100%;
@@ -395,10 +395,10 @@ button:focus {
     #contact form textarea {
         width:90%;
     }
-    #domain h1 {
+    #work h1 {
         width:19%;
     }
-    #elements h1 {
+    #bio h1 {
         width:25%;
     }
     #contact h1 {
