--- a/index.css
+++ b/index.css
@@ -395,19 +395,13 @@ button:focus {
     #contact form textarea {
         width:90%;
     }
-    #domain h1 {
+    #work h1 {
         width:19%;
     }
-    #elemets h1 {
-        width:33%;
+    #bio h1 {
+        width:25%;
     }
-    #vocab h1 {
-        width:33%;
-    }
-    #downloads h1 {
-        width:33%;
-    }
-    #essay h1 {
+    #contact h1 {
         width:33%;
     }
     header {
