--- a/index.css
+++ b/index.css
@@ -211,6 +211,12 @@ header table {
 #spec-table tr:nth-child(even) {
     background-color: #f2f2f2;
 }
+#spec-table td:nth-child(odd) {
+    width:30%
+}
+#spec-table td:nth-child(even) {
+    width:70%
+}
 #vocab {
     width:92vw;
     padding:6vh 4vw;
