--- a/index.css
+++ b/index.css
@@ -205,18 +205,16 @@ header table {
     border-bottom:4px solid rgb(255, 44, 90);
     width:25%;
 }
+#spec-table table{
+    width:100%
+}
 #spec-table th td {
     border-bottom: 1px solid #ddd;
 }    
 #spec-table tr:nth-child(even) {
     background-color: #f2f2f2;
 }
-#spec-table td:nth-child(odd) {
-    width:30%
-}
-#spec-table td:nth-child(even) {
-    width:70%
-}
+
 #vocab {
     width:92vw;
     padding:6vh 4vw;
