--- a/index.css
+++ b/index.css
@@ -8,7 +8,17 @@ body {
     overflow-x:hidden;
     scroll-behavior: smooth;
 }
-
+#loading {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    background: white;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 #spinner {
     animation: rotate 0.56s infinite linear;
     width:50px;
